fixed: z-index

--- a/src/apps/properties/src/components/PropertiesHeader/PropertiesHeader.less
+++ b/src/apps/properties/src/components/PropertiesHeader/PropertiesHeader.less
@@ -5,6 +5,7 @@
   padding: 1rem 0 0.5rem;
   position: sticky;
   top: 0;
+  z-index: 20;
 
   .Actions {
     display: flex;
@@ -14,10 +15,11 @@
       font-size: 1rem;
       width: 250px;
       flex: inherit;
+      margin: 0 1rem 0 0;
     }
     .Search {
       flex: 4;
-      margin: 0 1rem;
+      margin: 0 1rem 0 0;
     }
     .Sort {
       align-items: inherit;
